--- a/thule-people/gradle.properties
+++ b/thule-people/gradle.properties
@@ -1,5 +1,8 @@
 description=Thule People
 group=uk.co.serin.thule
 version=1.0.0-SNAPSHOT
+
+thuleSharedVersion=1.0.0-SNAPSHOT
+
 nexusHost=pooh
 nexusPort=8081
