--- a/thule-discovery/gradle.properties
+++ b/thule-discovery/gradle.properties
@@ -1,5 +1,8 @@
 description = Thule Discovery
 group=uk.co.serin.thule
 version=1.0.0-SNAPSHOT
+
+thuleSharedVersion=1.0.0-SNAPSHOT
+
 nexusHost=pooh
 nexusPort=8081
