--- a/thule-people/build.gradle
+++ b/thule-people/build.gradle
@@ -58,8 +58,8 @@ project("thule-people-service") {
     }
 
     dependencies {
-        compile("uk.co.serin.thule:thule-spring-boot-starter:1.0.0-SNAPSHOT")
-        compile("uk.co.serin.thule:thule-spring-boot-starter-oauth2:1.0.0-SNAPSHOT")
+        compile("uk.co.serin.thule:thule-spring-boot-starter:${thuleSharedVersion}")
+        compile("uk.co.serin.thule:thule-spring-boot-starter-oauth2:${thuleSharedVersion}")
         compile("com.googlecode.log4jdbc:log4jdbc:1.2")
         compile("mysql:mysql-connector-java")
         compile("org.flywaydb:flyway-core")
@@ -78,21 +78,21 @@ project("thule-people-service") {
         // Required to retry connecting to the configuration service when it is not available at startup
         compile("org.springframework.retry:spring-retry")
 
-        testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
+        testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
 
         itestCompile project(":thule-people-config")
-        itestCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2-test:1.0.0-SNAPSHOT")
+        itestCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2-test:${thuleSharedVersion}")
         itestCompile("com.h2database:h2")
         itestCompile("com.oracle:ojdbc8:18.3")
         itestCompile("org.hsqldb:hsqldb")
 
         ctestCompile project(":thule-people-config")
-        ctestCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2-test:1.0.0-SNAPSHOT")
+        ctestCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2-test:${thuleSharedVersion}")
 
-        dtestCompile("uk.co.serin.thule:thule-spring-boot-starter:1.0.0-SNAPSHOT")
-        dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2:1.0.0-SNAPSHOT")
-        dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2-test:1.0.0-SNAPSHOT")
-        dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
+        dtestCompile("uk.co.serin.thule:thule-spring-boot-starter:${thuleSharedVersion}")
+        dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2:${thuleSharedVersion}")
+        dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2-test:${thuleSharedVersion}")
+        dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
         dtestCompile("com.googlecode.log4jdbc:log4jdbc:1.2")
         dtestCompile("mysql:mysql-connector-java")
         dtestCompile("org.springframework.boot:spring-boot-starter-jdbc")
