--- a/thule-people/thule-people-config/src/main/resources/config/application.yml
+++ b/thule-people/thule-people-config/src/main/resources/config/application.yml
@@ -46,6 +46,7 @@ spring:
     username: thule
   flyway:
     baseline-on-migrate: true # Allow for case where the schema exists but Flyway did not create it. ***DO NOT*** leave set to true in prod environments
+    connect-retries: 30
     password: root
     url: jdbc:mysql://${thule.peopleservice.mysql.host:localhost}:${thule.peopleservice.mysql.port:3306}/mysql
     user: root
