--- a/thule-people/build.gradle
+++ b/thule-people/build.gradle
@@ -75,8 +75,7 @@ project("thule-people-service") {
         compile("org.springframework.cloud:spring-cloud-starter-sleuth")
 //        compile("org.springframework.cloud:spring-cloud-starter-zipkin")
         compile("org.springframework.data:spring-data-rest-hal-browser")
-        // Required to retry connecting to the configuration service when it is not available at startup
-        compile("org.springframework.retry:spring-retry")
+        compile("org.springframework.retry:spring-retry") // Required to retry connecting to the configuration service when it is not available at startup
 
         testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
 
