--- a/thule-gateway/thule-gateway-service/src/dtest/docker/thule-gateway-docker-tests/docker-compose.yml
+++ b/thule-gateway/thule-gateway-service/src/dtest/docker/thule-gateway-docker-tests/docker-compose.yml
@@ -5,16 +5,18 @@ services:
     image: pooh:8084/thule-gateway-service
     environment:
       EUREKA_CLIENT_ENABLED: "false" # Docker tests do not need a discovery registry
-      THULE_GATEWAYSERVICE_HEALTHCHECK_SERVICES: "" # Intentionally empty
+      JDK_JAVA_OPTIONS: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
       SPRING_CLOUD_CONFIG_ENABLED: "false" # Docker tests do not need a configuration service
+      # Since we are not using the configuration service to provide spring config, we instruct spring to use the config
+      # from a docker volume created at build time which contains the source for this micro-service
+      SPRING_CONFIG_ADDITIONAL_LOCATION: /thule-gateway/thule-gateway-config/src/main/resources/config/
+      THULE_GATEWAYSERVICE_HEALTHCHECK_SERVICES: "" # Intentionally empty
       TZ: Europe/London
     ports:
     - 9091:8080 # Required to allow docker tests to call the restful api
     volumes:
-    # Since we are not using the configuration service to provide spring config, we add the config to the
-    # docker containers file system in a standard spring boot location that spring boot uses to search for the config by default
-    - thule-gateway-config:/config
+    - thule-gateway-docker-tests:/thule-gateway
 
 volumes:
-  thule-gateway-config:
+  thule-gateway-docker-tests:
     external: true
