--- a/thule-people/thule-people-service/src/dtest/docker/thule-people-docker-tests/docker-compose.yml
+++ b/thule-people/thule-people-service/src/dtest/docker/thule-people-docker-tests/docker-compose.yml
@@ -4,14 +4,16 @@ services:
   thule-people-service:
     image: pooh:8084/thule-people-service
     environment:
+      JDK_JAVA_OPTIONS: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
+      # Since we are not using the configuration service to provide spring config, we instruct spring to use the config
+      # from a docker volume created at build time which contains the source for this micro-service
+      SPRING_CONFIG_ADDITIONAL_LOCATION: /thule-people/thule-people-config/src/main/resources/config/
       THULE_PEOPLESERVICE_MYSQL_HOST: mysql
       TZ: Europe/London
     ports:
       - 9094:8080 # Required to allow docker tests to call the restful api
     volumes:
-      # Since we are not using the configuration service to provide spring config, we add the config to the
-      # docker containers file system in a standard spring boot location that spring boot uses to search for the config by default
-      - thule-people-config:/config
+      - thule-people-docker-tests:/thule-people
 
   ################################  Servers and Databases Required By Docker tests  ################################
   mysql:
@@ -23,5 +25,5 @@ services:
       - 3308:3306 # Use 3306 for dev, 3307 for itest and 3308 for ctest so they can all execute simultaneously if required
 
 volumes:
-  thule-people-config:
+  thule-people-docker-tests:
     external: true
