--- a/thule-email/build.gradle
+++ b/thule-email/build.gradle
@@ -64,6 +64,8 @@ project("thule-email-service") {
         compile("org.springframework.cloud:spring-cloud-starter-zipkin")
         compile("org.springframework.retry:spring-retry") // Required to retry connecting to the configuration service when it is not available at startup
 
+        compileOnly("org.projectlombok:lombok")
+
         testCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2-test:${thuleSharedVersion}")
         testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
 
