--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -92,7 +92,9 @@ project("thule-test") {
         compile("org.springframework.boot:spring-boot-starter-test")
         compile("org.springframework.boot:spring-boot-starter-web")
         compile("org.springframework.retry:spring-retry")
- 
+
+        compileOnly("org.projectlombok:lombok")
+
         testCompile("org.springframework.cloud:spring-cloud-starter-oauth2")
         testCompile("pl.pojo:pojo-tester:0.7.6")
     }
@@ -115,6 +117,8 @@ project("thule-utils") {
         compile("org.springframework.boot:spring-boot-starter-logging")
         compile("org.springframework.boot:spring-boot-starter-validation")
         compile("org.springframework.boot:spring-boot-starter-web")
+
+        compileOnly("org.projectlombok:lombok")
 
         testCompile("org.springframework.boot:spring-boot-starter-data-jpa")
         testCompile("org.springframework.boot:spring-boot-starter-test")
