--- a/thule-cloud/thule-cloud-service/src/dtest/docker/thule-cloud-docker-tests/docker-compose.yml
+++ b/thule-cloud/thule-cloud-service/src/dtest/docker/thule-cloud-docker-tests/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     - 7888:8080
     restart: always
     volumes:
-    - thule-cloud-config:/config
+    - thule-cloud-docker-tests:/thule-cloud/thule-cloud-config/build/resources/main/config
 
   ################################  thule-discovery-service  ################################
   thule-discovery-service:
@@ -71,5 +71,5 @@ services:
     restart: always
 
 volumes:
-  thule-cloud-config:
+  thule-cloud-docker-tests:
     external: true
