--- a/thule-configuration/thule-configuration-config/src/main/resources/config/application-cit.yml
+++ b/thule-configuration/thule-configuration-config/src/main/resources/config/application-cit.yml
@@ -2,3 +2,11 @@
 logging:
   level:
     uk.co.serin.thule: trace
+
+# Spring boot configuration
+spring:
+  cloud:
+    config:
+      server:
+        native:
+          search-locations: ${thule.configurationservice.search-locations:/thule-cloud/thule-cloud-config/build/resources/main/config}/{application}
