--- a/thule-people/thule-people-config/src/main/resources/config/application-cit.yml
+++ b/thule-people/thule-people-config/src/main/resources/config/application-cit.yml
@@ -3,6 +3,12 @@ eureka:
   client:
     enabled: true
 
+# Spring logging
+logging:
+  level:
+    jdbc.sqlonly: info
+    uk.co.serin: trace
+
 # Thule configuration
 thule:
   peopleservice:
