--- a/thule-people/thule-people-config/src/main/resources/config/application-ctest.yml
+++ b/thule-people/thule-people-config/src/main/resources/config/application-ctest.yml
@@ -3,6 +3,12 @@ spring:
   zipkin:
     enabled: false
 
+# Spring logging
+logging:
+  level:
+    jdbc.sqlonly: info
+    uk.co.serin: trace
+
 # Thule configuration
 thule:
   peopleservice:
