--- a/thule-people/thule-people-config/src/main/resources/config/application-ide.yml
+++ b/thule-people/thule-people-config/src/main/resources/config/application-ide.yml
@@ -7,6 +7,12 @@ eureka:
 server:
   port: 8094
 
+# Spring logging
+logging:
+  level:
+    jdbc.sqlonly: info
+    uk.co.serin: trace
+
 # Thule configuration
 thule:
   discoveryservice:
