--- a/thule-people/thule-people-config/src/main/resources/config/application-itest.yml
+++ b/thule-people/thule-people-config/src/main/resources/config/application-itest.yml
@@ -1,3 +1,9 @@
+# Spring logging
+logging:
+  level:
+    jdbc.sqlonly: info
+    uk.co.serin: trace
+
 # Thule configuration
 thule:
   peopleservice:
