--- a/thule-people/thule-people-config/src/main/resources/config/application-ide.yml
+++ b/thule-people/thule-people-config/src/main/resources/config/application-ide.yml
@@ -1,19 +1,23 @@
-# Eureka configuration
-eureka:
-  client:
-    enabled: true
-
-# Spring server configuration
-server:
-  port: 8094
-
 # Spring logging
 logging:
   level:
     jdbc.sqlonly: info
     uk.co.serin: trace
 
+# Spring server configuration
+server:
+  port: 8094
+
+# Spring boot configuration
+spring:
+  flyway:
+    schemas: THULE
+
 # Thule configuration
 thule:
   discoveryservice:
+    host: localhost
     port: 8761
+  peopleservice:
+    mysql:
+      host: localhost
