--- a/thule-people/thule-people-config/src/main/resources/config/application.yml
+++ b/thule-people/thule-people-config/src/main/resources/config/application.yml
@@ -1,7 +1,6 @@
 # Eureka configuration
 eureka:
   client:
-    enabled: false # Most environments (test) do no need a discovery service so it is disabled by default
     serviceUrl:
       # Location of peer discovery services to keep the registry in sync across all discovery services, in this case we only have a single node so it refers to itself
       defaultZone: http://${thule.discoveryservice.host:localhost}:${thule.discoveryservice.port:8080}/eureka/
@@ -41,14 +40,19 @@ spring:
     name: thule-people-service
   datasource:
     driver-class-name: net.sf.log4jdbc.DriverSpy
+    hikari:
+      maximumPoolSize: 100
     password: thule
-    url: jdbc:log4jdbc:mysql://${thule.peopleservice.mysql.host:localhost}:${thule.peopleservice.mysql.port:3306}/thule?serverTimezone=Europe/London
+    url: jdbc:log4jdbc:mysql://${thule.peopleservice.mysql.host:localhost}:${thule.peopleservice.mysql.port:3306}/${spring.flyway.schemas}?serverTimezone=Europe/London
     username: thule
   flyway:
-    baseline-on-migrate: true # Allow for case where the schema exists but Flyway did not create it. ***DO NOT*** leave set to true in prod environments
     connect-retries: 120
     password: root
-    url: jdbc:mysql://${thule.peopleservice.mysql.host:localhost}:${thule.peopleservice.mysql.port:3306}/mysql
+    placeholders:
+      password: ${spring.datasource.password}
+      schema-name: ${spring.flyway.schemas}
+      username: ${spring.datasource.username}
+    url: jdbc:mysql://${thule.peopleservice.mysql.host:localhost}:${thule.peopleservice.mysql.port:3306}
     user: root
   security:
     user:
