--- a/thule-people/thule-people-service/src/dtest/docker/thule-people-docker-tests/docker-compose.yml
+++ b/thule-people/thule-people-service/src/dtest/docker/thule-people-docker-tests/docker-compose.yml
@@ -4,10 +4,13 @@ services:
   thule-people-service:
     image: pooh:8084/thule-people-service
     environment:
+      EUREKA_CLIENT_ENABLED: "false" # Docker tests do not need a discovery registry
       JDK_JAVA_OPTIONS: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
+      SPRING_CLOUD_CONFIG_ENABLED: "false" # Docker tests do not need a configuration service
       # Since we are not using the configuration service to provide spring config, we instruct spring to use the config
       # from a docker volume created at build time which contains the source for this micro-service
       SPRING_CONFIG_ADDITIONAL_LOCATION: /thule-people/thule-people-config/src/main/resources/config/
+      SPRING_FLYWAY_SCHEMAS: thule
       THULE_PEOPLESERVICE_MYSQL_HOST: mysql
       TZ: Europe/London
     ports:
