Refactored database scripts and related spring profiles to latest standards

--- a/thule-cloud/thule-cloud-service/src/dtest/docker/thule-cloud-docker-tests/docker-compose.yml
+++ b/thule-cloud/thule-cloud-service/src/dtest/docker/thule-cloud-docker-tests/docker-compose.yml
@@ -72,7 +72,7 @@ services:
     restart: always
 
   ################################  Servers and Databases Required By Docker tests  ################################
-  mysql:
+  mysql-people-service:
     image: mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
