--- a/thule-people/build.gradle
+++ b/thule-people/build.gradle
@@ -63,6 +63,16 @@ project("thule-people-service") {
             }
         }
     }
+    dtest {
+        // Remove docker container once the contract tests have completed
+        afterSuite { descriptor ->
+            if (descriptor.getName().contains("Gradle Test Executor")) {
+                exec {
+                    commandLine "docker-compose", "-f", "thule-people-service/src/dtest/docker/thule-people-docker-tests/docker-compose.yml", "down", "-v", "--remove-orphans"
+                }
+            }
+        }
+    }
     sonarqube {
         properties {
             // SonarQube will fail due to duplicate code across micro-services, however, this is legal. So we will exclude cpd for those classes
