--- a/thule-gateway/build.gradle
+++ b/thule-gateway/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext["spring-security-oauth2-autoconfigure.version"] = "2.1.2.RELEASE" // The pom for org.springframework.cloud:spring-cloud-security-dependencies:2.1.0.RELEASE incorrectly specifies <spring-security-oauth2-autoconfigure.version>2.1.0.M4</spring-security-oauth2-autoconfigure.version>
+    ext["spring-cloud-security.version"] = "2.1.1.RELEASE" // The pom for org.springframework.cloud:spring-cloud-security-dependencies:2.1.0.RELEASE incorrectly specifies <spring-security-oauth2-autoconfigure.version>2.1.0.M4</spring-security-oauth2-autoconfigure.version>
 
     repositories {
         maven { url "http://${nexusHost}:${nexusPort}/repository/maven-public" }
